tests/badreadings.srv
; pos=fail warn=6 dummycrprotection=
a b 10.0 f 005d +10
a c 10.0f 365d +10
a d 10.0d 005d N10E
a e 10.0i6 N10E 81
a f 10i6 N-10W 81
a g 10i6 N10E 91
a h 10.0  30.5:20 -11g
a i 10.0  30:50 -101g
a j 1.0 -1 +10
a k -10.0  30:20 -11g
a l 10.0 12.5:0 0:0
a m 10.0 12:0 0.5:0
a n 10.0 12:29.5:30 0d
a o 10.0 12:0 0:1.5:1
